@@ -187,10 +187,11 @@ and the mark before it.
 is represented as a list of strings.  See section <a href="xemacs_12.html#SEC101">Rectangles</a>, for basic
 information on rectangles and how to specify rectangles in a buffer.
 </p><dl compact="compact">
-<p>
+<dd><p>
 <a name="IDX361"></a>
 <a name="IDX362"></a>
-</p><dt><kbd> C-x r r <var>r</var>
+</p></dd>
+<dt><kbd> C-x r r <var>r</var>
 </kbd></dt>
 <dd><p>Copy the region-rectangle into register <var>r</var>
 (<code>copy-rectangle-to-register</code>).  With a numeric argument, delete it
