@@ -249,10 +249,11 @@ weeks (months, years) as starting on particular dates.  So Calendar mode
 provides commands to move to the beginning or end of a week, month or
 year:
 </p><dl compact="compact">
-<p>
+<dd><p>
 <a name="IDX1157"></a>
 <a name="IDX1158"></a>
-</p><dt><kbd> C-a
+</p></dd>
+<dt><kbd> C-a
 </kbd></dt>
 <dd><p>Move point to start of week (<code>calendar-beginning-of-week</code>).
 <a name="IDX1159"></a>
@@ -3238,10 +3239,11 @@ In Char mode, each character is sent directly to the inferior subshell,
 except for the Term escape character, normally <kbd>C-c</kbd>.
 </p><p>To switch between line and char mode, use these commands:
 </p><dl compact="compact">
-<p>
+<dd><p>
 <a name="IDX1427"></a>
 findex term-char-mode
-</p><dt><kbd> C-c C-j
+</p></dd>
+<dt><kbd> C-c C-j
 </kbd></dt>
 <dd><p>Switch to line mode.  Do nothing if already in line mode.
 </p><a name="IDX1428"></a>
@@ -3286,10 +3288,11 @@ For example, <kbd>C-c C-x o</kbd> invokes the global binding of
 <p>Term mode has a pager feature.  When the pager is enabled,
 term mode will pause at the end of each screenful.
 </p><dl compact="compact">
-<p>
+<dd><p>
 <a name="IDX1430"></a>
 <a name="IDX1431"></a>
-</p><dt><kbd> C-c C-q
+</p></dd>
+<dt><kbd> C-c C-q
 </kbd></dt>
 <dd><p>Toggles the pager feature:  Disables the pager if it is enabled,
 and vice versa.  This works in both line and char modes.
