@@ -354,9 +354,10 @@ completion is available runs the command
 </p><p>  Here are some commands you can use to choose a completion from a
 window that displays a list of completions:
 </p><dl compact="compact">
-<p>
+<dd><p>
 <a name="IDX222"></a>
-</p><dt><kbd> button2up
+</p></dd>
+<dt><kbd> button2up
 </kbd></dt>
 <dd><p>Clicking mouse button 2 on a completion in the list of possible
 completions chooses that completion (<code>mouse-choose-completion</code>).
